Correct h1 -err on iphone

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -114,7 +114,6 @@ header {
         margin-bottom: 1.5em;
         overflow: hidden;
         .intro-wrap {
-            z-index: 2;
             position: absolute;
             top: 40%;
             margin-left: 1em;
@@ -135,18 +134,20 @@ header {
                 top: 10%;
             }
             .h1-1 {
+                z-index: 4;
                 position: relative;
                 margin: 0;
                 padding: 0;
                 color: white;
                 text-shadow: 1px 1px 20px black;
                 .and-sign {
+                    z-index: 3;
                     position: absolute;
                     top: -.22em;
-                    left: 3.45em;
                     color: $color-blue;
                 }
                 .h1-2 {
+                    z-index: 5;
                     position: absolute;
                     top: 1em;
                     left: 3.75em;
