--- a/style.css
+++ b/style.css
@@ -577,7 +577,6 @@ header .intro {
   overflow: hidden;
 }
 header .intro .intro-wrap {
-  z-index: 2;
   position: absolute;
   top: 40%;
   margin-left: 1em;
@@ -609,6 +608,7 @@ header .intro .intro-wrap {
   }
 }
 header .intro .intro-wrap .h1-1 {
+  z-index: 4;
   position: relative;
   margin: 0;
   padding: 0;
@@ -616,12 +616,13 @@ header .intro .intro-wrap .h1-1 {
   text-shadow: 1px 1px 20px black;
 }
 header .intro .intro-wrap .h1-1 .and-sign {
+  z-index: 3;
   position: absolute;
   top: -0.22em;
-  left: 3.45em;
   color: #00abdf;
 }
 header .intro .intro-wrap .h1-1 .h1-2 {
+  z-index: 5;
   position: absolute;
   top: 1em;
   left: 3.75em;
